<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/top_seperation"
    tools:context=".ui.RepoDetailActivity">

    <ImageView
        android:id="@+id/owner_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/name_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_below_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="111dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="92dp" />

    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/top_seperation"
        android:text="@string/repo_name"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toStartOf="@+id/name_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_below_image" />

    <TextView
        android:id="@+id/name_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name_value"

        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_title"
        app:layout_constraintTop_toTopOf="@+id/guideline_below_image" />


    <TextView
        android:id="@+id/project_url_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/top_seperation"

        android:text="@string/project_url_title"
        android:textAlignment="viewStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/project_url"
        app:layout_constraintEnd_toStartOf="@+id/project_url"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/project_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:maxLines="4"
        android:singleLine="false"
        android:text="https://github.com/shipra578/gitMobileSearch"
        android:textAlignment="viewStart"
        android:textColor="@color/hyperlink_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/project_url_title"
        app:layout_constraintTop_toBottomOf="@+id/name_value" />


    <TextView
        android:id="@+id/description_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description_title"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/description_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/description_value"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/description_title"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/contributor_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contributor_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>